--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,14 @@
 </head>
 <body>
 
-<div class='header col-md-6 pull-right'>
-	<% if current_user %>
-	  Signed in as <%= current_user.first_name %> <%=current_user.last_name%> | <%= link_to "Logout", '/logout' %>
+<div class='header col-md-3 pull-right'>
+  <% if request.env['PATH_INFO'] == '/' or  request.env['PATH_INFO'] == '/login'%>
+
+
+	<% elsif current_user && request.env['PATH_INFO']=='/main' %>
+	  <%= link_to "Logout", '/logout' %>
+  <% elsif current_user %>
+    <%=link_to 'Dashboard', '/main' %> | <%= link_to "Logout", '/logout' %>
 	<% else %>
 	  <%= link_to 'Login', '/signup' %> | <%= link_to 'Signup', '/signup' %>
 	<% end %>
