more style cleanup

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -17,7 +17,7 @@
 @import 'bootstrap-sprockets'
 @import 'bootstrap'
 body
-	:background-color lightblue
+	:background-color linen
 .bordered
 	:border solid black 1px
 
