--- a/app/views/orgs/index.html.erb
+++ b/app/views/orgs/index.html.erb
@@ -4,8 +4,8 @@
 
 
 <div class ='row'>
-	<div class ="col-md-6 ">
-	<h3>Hi <%=current_user.first_name%> <%= current_user.last_name %>!</h3>
+	<div class ="col-md-7 ">
+	<h3 style='margin-top:0px;'>Hi <%=current_user.first_name%> <%= current_user.last_name %>!</h3>
 	<h4>Here are the Organizations you can join:</h4> <br>
 
 		<% @orgs.each do |t| %>
@@ -16,7 +16,7 @@
 		<% end %>
 	</div>
 
-	<div class="col-md-6 bordered">
+	<div class="col-md-5 bordered">
 		<h3>Create a new organization</h3>
 		<%= flash[:alert] if flash[:alert] %>
 
